[package]
name = "terminal-pong"
version = "0.1.0"
edition = "2021"

[package.metadata.winres]
OriginalFilename = "terminal-pong.exe"
LegalCopyright = "© 2025 IshmamR"
FileDescription = "Terminal Pong"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
rand = "0.9.1"
tui-big-text = "0.7.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
